--- a/style.css
+++ b/style.css
@@ -6,55 +6,46 @@ body {
   background-color: #222222;
   background: radial-gradient(circle, #111111, #222222); /* Standard syntax */
 }
-.top {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
 
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-
-  -webkit-align-content: center;
-  -ms-flex-line-pack: center;
-  align-content: center;
-
-  -webkit-align-items: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-
+.nx {
+  display:block;
+  align: center;
 }
-.page {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
 
-  -webkit-box-orient: horizontal;
-  -moz-box-orient: horizontal;
-  box-orient: horizontal;
+/* .page { */
+/*   position: relative; */
+/*   top: 30%; */
+/*   transform: translateY(-30%); */
+/* } */
+/* .page { */
+/*   position: relative; */
+/*   /1* top: 30%; *1/ */
+/*   /1* transform: translateY(-30%); *1/ */
+/*   display: -webkit-box; */
+/*   display: -moz-box; */
+/*   display: box; */
 
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  box-pack: center;
+/*   -webkit-box-orient: horizontal; */
+/*   -moz-box-orient: horizontal; */
+/*   box-orient: horizontal; */
 
-  -webkit-box-direction: normal;
-  -moz-box-direction: normal;
-  box-direction: normal;
+/*   -webkit-box-pack: center; */
+/*   -moz-box-pack: center; */
+/*   box-pack: center; */
 
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-}
+/*   -webkit-box-direction: normal; */
+/*   -moz-box-direction: normal; */
+/*   box-direction: normal; */
+
+/*   -webkit-box-align: center; */
+/*   -moz-box-align: center; */
+/*   box-align: center; */
+/* } */
 
 .middle {
+  position: relative;
+  top: 30%;
+  transform: translateY(-30%);
   -webkit-box-ordinal-group: 1;
   -moz-box-ordinal-group: 1;
   box-ordinal-group: 1;
@@ -88,6 +79,4 @@ body {
   box-flex: 0;
 
   padding-left: 10%;
-}
-.nx {
 }
