--- a/css/vex-theme-wireframe.css
+++ b/css/vex-theme-wireframe.css
@@ -115,8 +115,8 @@
 
 /* line 9, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe {
-  padding-top: 6%;
-  padding-bottom: 10%;
+  padding-top: 5%;
+  padding-bottom: 6%;
 }
 /* line 13, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-overlay {
@@ -128,13 +128,15 @@
   background: #181818;
   color: white;
   border: 2px solid #424242;
-  padding: 5px;
+  padding: 1em;
+  display: block;
   position: relative;
   margin: 0 auto;
   max-width: 100%;
   width: 530px;
   font-size: 2em;
   line-height: 1em;
+  text-align: center;
 }
 /* line 29, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-content h1, .vex.vex-theme-wireframe .vex-content h2, .vex.vex-theme-wireframe .vex-content h3, .vex.vex-theme-wireframe .vex-content h4, .vex.vex-theme-wireframe .vex-content h5, .vex.vex-theme-wireframe .vex-content h6, .vex.vex-theme-wireframe .vex-content p, .vex.vex-theme-wireframe .vex-content ul, .vex.vex-theme-wireframe .vex-content li {
@@ -151,9 +153,9 @@
 .vex.vex-theme-wireframe .vex-close:before {
   position: absolute;
   content: "\00D7";
-  font-size: 20px;
+  font-size: 10px;
   font-weight: normal;
-  line-height: 20px;
+  line-height: 10px;
   height: 20px;
   width: 20px;
   text-align: center;
@@ -208,14 +210,15 @@
   -o-border-radius: 0;
   border-radius: 0;
   border: 0;
-  float: right;
+  /* float: right; */
   margin: 0 0 0 0.5em;
   font-family: inherit;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   font-size: 0.8em;
   line-height: 1em;
-  padding: 0.75em 2em;
+  padding: 0.45em 0.45em;
+  display: center;
 }
 /* line 92, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button.vex-last {
