Added padding for image top part

--- a/css/vex-theme-wireframe.css
+++ b/css/vex-theme-wireframe.css
@@ -138,6 +138,10 @@
   line-height: 1em;
   text-align: center;
 }
+
+img {
+  padding-top: 10px;
+}
 /* line 29, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-content h1, .vex.vex-theme-wireframe .vex-content h2, .vex.vex-theme-wireframe .vex-content h3, .vex.vex-theme-wireframe .vex-content h4, .vex.vex-theme-wireframe .vex-content h5, .vex.vex-theme-wireframe .vex-content h6, .vex.vex-theme-wireframe .vex-content p, .vex.vex-theme-wireframe .vex-content ul, .vex.vex-theme-wireframe .vex-content li {
   color: inherit;
