--- a/css/vex-theme-wireframe.css
+++ b/css/vex-theme-wireframe.css
@@ -115,7 +115,7 @@
 
 /* line 9, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe {
-  padding-top: 5%;
+  padding-top: 4%;
   padding-bottom: 6%;
 }
 /* line 13, ../sass/vex-theme-wireframe.sass */
@@ -141,6 +141,7 @@
 
 img {
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 /* line 29, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-content h1, .vex.vex-theme-wireframe .vex-content h2, .vex.vex-theme-wireframe .vex-content h3, .vex.vex-theme-wireframe .vex-content h4, .vex.vex-theme-wireframe .vex-content h5, .vex.vex-theme-wireframe .vex-content h6, .vex.vex-theme-wireframe .vex-content p, .vex.vex-theme-wireframe .vex-content ul, .vex.vex-theme-wireframe .vex-content li {
